Added a raccoon image and a few elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey i'm a big heading</h1>
-<P>Hey. i'm a paragraph</P>
-<a href="https://google.com" target="_blank" title="Let's rock!">Click me! i'm a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Raccoons World</title>
+    </head>
+<Body>    
+    <h1>Hey i'm a big heading</h1>
+    <P>Hey. i'm a <b>Raccoon</b> cool huh? </P>
+    <a href="https://google.com" target="_blank" title="Let's rock!">Click me! i'm a link!</a>
+    <P>My name is:<br>
+    Night</P>
+    <img src="https://cdn.dribbble.com/users/823746/screenshots/6054896/media/29b22ac13afdcc20d30e516e5487ed4a.png?compress=1&resize=700x500&vertical=top">
+</Body>
+</html>
