--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
     </header>
     <main>
       <section id="home">
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to My Weird Website</h1>
         <p>Here you can find information about my company and the services we offer.</p>
       </section>
       <section id="about">
@@ -26,9 +26,9 @@
       <section id="services">
         <h2>Our Services</h2>
         <ul>
-          <li>Service 1</li>
-          <li>Service 2</li>
-          <li>Service 3</li>
+          <li>Killing</li>
+          <li>Kidnaping</li>
+          <li>Taming ;)</li>
         </ul>
       </section>
       <section id="contact">
@@ -45,7 +45,7 @@
       </section>
     </main>
     <footer>
-      <p>Copyright © 2023 My Website</p>
+      <p>Copyright © 2030 Rin world</p>
     </footer>
   </body>
 </html>
